--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,26 @@ body {
   transition: background 0.3s, color 0.3s;
 }
 
+.light {
+background-color: white;
+color: black;
+}
+
+.dark {
+background-color: black;
+color: white;
+}
+
+.ocean {
+background-color: #0077be;
+color: #e0f7fa;
+}
+
+.nord {
+background-color: #2e3440;
+color: #d8dee9;
+}
+
 ul {
   margin: 0;
   padding: 0;
